@@ -1,0 +1,9 @@
+CORE
+named_sequence1.sv
+--bound 0
+^\[main\.assert\.1\] always main\.x_is_ten: PROVED up to bound 0$
+^EXIT=0$
+^SIGNAL=0$
+--
+^warning: ignoring
+--
