@@ -118,6 +118,11 @@ void verilog_typecheckt::collect_symbols(
 {
 }
 
+void verilog_typecheckt::collect_symbols(
+  const verilog_sequence_declarationt &declaration)
+{
+}
+
 void verilog_typecheckt::collect_symbols(const typet &type)
 {
   // These types are not yet converted.
@@ -833,6 +838,10 @@ void verilog_typecheckt::collect_symbols(
   else if(module_item.id() == ID_verilog_property_declaration)
   {
     collect_symbols(to_verilog_property_declaration(module_item));
+  }
+  else if(module_item.id() == ID_verilog_sequence_declaration)
+  {
+    collect_symbols(to_verilog_sequence_declaration(module_item));
   }
   else
     DATA_INVARIANT(false, "unexpected module item: " + module_item.id_string());
