@@ -306,6 +306,9 @@ void verilog_typecheckt::interface_module_item(
   else if(module_item.id() == ID_verilog_property_declaration)
   {
   }
+  else if(module_item.id() == ID_verilog_sequence_declaration)
+  {
+  }
   else
   {
     DATA_INVARIANT(false, "unexpected module item: " + module_item.id_string());
