@@ -3290,6 +3290,9 @@ void verilog_synthesist::synth_module_item(
   else if(module_item.id() == ID_verilog_property_declaration)
   {
   }
+  else if(module_item.id() == ID_verilog_sequence_declaration)
+  {
+  }
   else
   {
     throw errort().with_location(module_item.source_location())
